oldstuff/echo-service-istio-ssl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-app
  name: demo-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo
spec:
  selector:
    app: demo-app
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "demo.local"
    - "demo.tp.lan"
    - "demo.kube.lan"
    - "demo.gmkc.lan"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "demo.local"
    - "demo.tp.lan"
    - "demo.kube.lan"
    - "demo.gmkc.lan"
    tls:
      mode: SIMPLE
      credentialName: demo-tls-secret
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-service
  namespace: demo
spec:
  hosts:
  - "demo.local"
  - "demo.tp.lan"
  - "demo.kube.lan"
  - "demo.gmkc.lan"
  exportTo:
  - "."
  - istio-ingress
  - istio-system
  gateways:
  - demo-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demo-app.demo.svc.cluster.local
        port:
          number: 80
---
